# first

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: design.md  limitations.md
docs/architecture/: 001_structure.md  002_crash_point.md  004_orchestrator.md
docs/proof/: reference_wal.md
examples/reference_wal/: Cargo.toml
examples/reference_wal/src/: lib.rs  wal.rs
examples/reference_wal/tests/: basic_recovery.rs  crash_consistency.rs
src/: env.rs  lib.rs  orchestrator.rs  rt.rs  test.rs
tests/: canonical_append_log.rs  repro_issue_29.rs  simple.rs
