[package]
name = "first"
version = "0.1.0"
edition = "2024"
description = "Deterministic crash testing framework for storage engines"
license = "Apache-2.0"
repository = "https://github.com/siphonite/first"
keywords = ["crash-testing", "storage", "database", "testing", "fault-injection"]
categories = ["development-tools::testing"]

[dependencies]
libc = "0.2"
uuid = { version = "1.20.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
